--- a/status.html
+++ b/status.html
@@ -2,33 +2,22 @@
 <html lang="fa">
 <head>
 <meta charset="UTF-8" />
-<title>صفحه نئونی با پنل کاربری و وضعیت سرور</title>
+<title>صفحه کامل با پنل و سرورها</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap');
-  
-  /* استایل کلی */
+
   body {
     margin: 0;
-    padding: 20px;
     font-family: 'Vazirmatn', sans-serif;
-    background: #000000; /* سیاه مطلق */
-    color: #eee;
+    background: url('https://mir-s3-cdn-cf.behance.net/project_modules/1400/273126115942507.6067070353764.gif') no-repeat center center fixed;
+    background-size: cover;
     direction: rtl;
+    color: white;
     overflow-x: hidden;
   }
 
-  /* کانتینر کلی برای همه */
-  .container {
-    display: flex;
-    justify-content: center; /* وسط چین افقی */
-    align-items: flex-start;
-    gap: 40px;
-    min-height: 100vh;
-    position: relative;
-  }
-
-  /* پنل کاربری سمت راست بالا */
+  /* پنل کاربری */
   #userPanel {
     background: linear-gradient(145deg, #121212, #1a1a1a);
     border-radius: 20px;
@@ -37,21 +26,10 @@
     padding: 30px 30px 40px;
     color: #ccc;
     position: fixed;
-    top: 20px;
+    top: 70px;
     right: 20px;
     display: none;
     z-index: 10;
-  }
-
-  #userPanel h2 {
-    font-size: 28px;
-    color: #0ff;
-    margin-top: 0;
-    margin-bottom: 25px;
-    font-weight: 700;
-    letter-spacing: 1px;
-    text-align: center;
-    text-shadow: 0 0 10px #0ff;
   }
 
   .info-row {
@@ -68,45 +46,50 @@
     color: #aaffff;
     text-shadow: 0 0 6px #0ff;
   }
-
   .info-row .label {
     opacity: 0.7;
     font-weight: 400;
     color: #88eeff;
   }
 
+  /* دکمه بستن پنل */
   #closePanelBtn {
-    position: absolute;
-    top: 15px;
-    left: 20px;
-    font-size: 26px;
+    position: fixed;
+    top: 30px;
+    right: 20px;
+    font-size: 32px;
     color: #f0f;
     cursor: pointer;
     user-select: none;
     font-weight: bold;
     transition: color 0.3s ease;
     text-shadow: 0 0 8px #f0f;
+    z-index: 20;
   }
-
   #closePanelBtn:hover {
     color: #0ff;
     text-shadow: 0 0 12px #0ff;
   }
 
-  /* دکمه باز کردن پنل */
+  /* دکمه بازکردن پنل */
   #openPanelBtn {
     position: fixed;
-    top: 20px;
-    right: 400px;
-    padding: 10px 20px;
-    font-size: 15px;
-    border-radius: 25px;
+    top: 30px;
+    right: 70px;
+    width: 38px;
+    height: 38px;
+    font-size: 22px;
+    border-radius: 50%;
     border: none;
     cursor: pointer;
     background: linear-gradient(45deg, #0ff, #f0f);
     color: white;
     box-shadow: 0 0 10px #0ff, 0 0 20px #f0f;
     z-index: 15;
+    line-height: 38px;
+    text-align: center;
+    user-select: none;
+    padding: 0;
   }
   #openPanelBtn:hover {
     box-shadow: 0 0 20px #0ff, 0 0 40px #f0f;
@@ -136,40 +119,25 @@
     text-shadow: 0 0 4px #0ff;
   }
 
-
-  /* بخش وسط (وضعیت سرور + کوییک مچ) */
-
-  .middle-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
-    max-width: 440px;
-    width: 100%;
-  }
-
-
-  /* استایل بخش وضعیت سرور */
-  .server-box {
-    background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
-                url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIpbiNoYX5ei5NWDxQjgcjeuQZklLU5V9hXw&s') no-repeat center center;
-    background-size: cover;
-    border: 4px solid;
+  /* بخش وسط مستطیلی */
+  .status-container {
+    max-width: 460px;
+    background: rgba(0,0,0,0.7);
+    border: 4px solid #0ff;
     border-radius: 20px;
-    max-width: 400px;
-    padding: 30px 20px;
+    margin: 120px auto 20px;
+    padding: 35px 30px 30px;
     position: relative;
-    animation: rgb-border 4s linear infinite;
     color: white;
     text-align: center;
-    direction: rtl;
   }
-  @keyframes rgb-border {
-    0%   { border-color: #ff0000; box-shadow: 0 0 15px #ff0000; }
-    25%  { border-color: #00ff00; box-shadow: 0 0 15px #00ff00; }
-    50%  { border-color: #0000ff; box-shadow: 0 0 15px #0000ff; }
-    75%  { border-color: #ffff00; box-shadow: 0 0 15px #ffff00; }
-    100% { border-color: #ff0000; box-shadow: 0 0 15px #ff0000; }
+
+  .status-container h2.title {
+    font-size: 28px;
+    margin-bottom: 25px;
+    font-weight: 700;
+    letter-spacing: 1.5px;
+    text-shadow: 0 0 12px #0ff;
   }
 
   .wifi-icon {
@@ -206,11 +174,7 @@
   .connecting img {
     transform: scale(1.5);
   }
-  .server-box h2 {
-    font-size: 24px;
-    margin-top: 40px;
-    transition: color 0.3s ease;
-  }
+
   .status-default {
     color: white;
   }
@@ -221,11 +185,17 @@
   .status-offline {
     color: #ff4444;
   }
+  .status-error {
+    color: #ffcc33;
+    text-shadow: 0 0 8px #ffcc33;
+  }
+
   .alert {
     margin-top: 25px;
     font-size: 16px;
     color: #ffaaaa;
   }
+
   .connect-btn {
     margin-top: 30px;
     padding: 12px 25px;
@@ -240,62 +210,56 @@
   .connect-btn:hover {
     background-color: #1976d2;
   }
+
   .message-box {
     margin-top: 20px;
-    font-size: 14px;
-    color: #ffa;
-    display: none;
+    font-size: 16px;
+    min-height: 24px;
+    font-weight: 700;
+  }
+  .msg-green {
+    color: #00ff00;
+    text-shadow: 0 0 6px #0f0;
+  }
+  .msg-red {
+    color: #ff3333;
+    text-shadow: 0 0 6px #f33;
+  }
+  .msg-yellow {
+    color: #ffcc33;
+    text-shadow: 0 0 6px #fc3;
   }
 
+  /* بخش سرورها کنار بخش وسط */
+  .container-main {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 20px;
+  }
 
-  /* کوییک مچ */
-
-  .quick-match {
-    width: 400px;
-    color: #fff;
-    font-family: 'Minecraftia', monospace;
+  .server-box {
+    background: rgba(0,0,0,0.65);
+    border: 2px solid #00ffff;
+    box-shadow: 0 0 20px #00ffff, 0 0 40px #00ffff;
+    max-width: 400px;
+    padding: 30px 20px;
+    border-radius: 20px;
+    position: relative;
+    color: white;
     text-align: center;
   }
 
-  .neon-title {
-    font-size: 48px;
-    animation: rgbNeon 6s linear infinite;
-    text-shadow: 0 0 4px #0f0, 0 0 8px #0f0, 0 0 12px #0f0;
+  .server-title {
+    font-weight: 700;
+    font-size: 22px;
+    margin-top: 40px;
     margin-bottom: 20px;
+    text-shadow: 0 0 12px #0ff;
   }
-  @keyframes rgbNeon {
-    0% { color: #00ff00; }
-    33% { color: #00ffff; }
-    66% { color: #ff00ff; }
-    100% { color: #00ff00; }
-  }
-  #serversToggleBtn {
-    font-size: 20px;
-    padding: 12px 36px;
-    background: linear-gradient(45deg, #556655, #99cc88, #556655);
-    background-size: 200% 200%;
-    animation: grayGreenShift 5s ease infinite;
-    color: #aaddaa;
-    border: none;
-    border-radius: 10px;
-    box-shadow: 0 0 8px #556655, 0 0 18px #99cc88;
-    cursor: pointer;
-    user-select: none;
-    display: flex;
-    align-items: center;
-    margin-bottom: 15px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  #serversToggleBtn:hover {
-    transform: scale(1.05);
-  }
-  #arrow {
-    margin-right: 8px;
-    transition: transform 0.3s;
-  }
+
   .server-select-container {
-    overflow: hidden; /* حذف اسکرول این بخش */
+    overflow: hidden;
     background: linear-gradient(90deg, #0f0c29, #302b63, #24243e);
     width: 220px;
     padding: 10px;
@@ -303,7 +267,8 @@
     border: 2px solid;
     animation: neonBorder 8s linear infinite;
     box-shadow: 0 0 8px #0f0, 0 0 16px #0f0;
-    margin: 0 auto 15px auto;
+    margin-bottom: 15px;
+    text-align: right;
   }
   @keyframes neonBorder {
     0% { border-color: #00ff00; }
@@ -329,25 +294,7 @@
     box-shadow: 0 0 8px #0f0, 0 0 12px #0f0;
     font-weight: bold;
   }
-  .message-box-qm {
-    font-size: 18px;
-    min-height: 30px;
-    margin-bottom: 10px;
-    text-align: center;
-    font-weight: bold;
-  }
-  .msg-green {
-    color: #00ff00;
-    text-shadow: 0 0 6px #0f0;
-  }
-  .msg-red {
-    color: #ff3333;
-    text-shadow: 0 0 6px #f33;
-  }
-  .msg-orange {
-    color: #ffa500;
-    text-shadow: 0 0 6px #fa0;
-  }
+
   .confirm-btn {
     font-size: 18px;
     padding: 10px 40px;
@@ -364,20 +311,40 @@
   .confirm-btn:hover {
     transform: scale(1.05);
   }
-  @keyframes grayGreenShift {
-    0%,100% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-  }
+
   @keyframes rgbBlueGreenShift {
     0%,100% { background-position: 0% 50%; }
     50% { background-position: 100% 50%; }
   }
+
+  /* کوییک مچ زیر */
+  .quickmatch-container {
+    max-width: 460px;
+    margin: 30px auto 60px;
+    color: #fff;
+    text-align: center;
+    font-family: 'Minecraftia', monospace;
+  }
+  .neon-title {
+    font-size: 48px;
+    animation: rgbNeon 6s linear infinite;
+    text-shadow: 0 0 4px #0f0, 0 0 8px #0f0, 0 0 12px #0f0;
+    margin-bottom: 20px;
+  }
+  @keyframes rgbNeon {
+    0% { color: #00ff00; }
+    33% { color: #00ffff; }
+    66% { color: #ff00ff; }
+    100% { color: #00ff00; }
+  }
+
 </style>
 </head>
 <body>
 
-<!-- دکمه بازکردن پنل -->
-<button id="openPanelBtn" aria-expanded="false" aria-controls="userPanel">پنل کاربری</button>
+<!-- دکمه باز و بسته پنل -->
+<button id="openPanelBtn" aria-expanded="false" aria-controls="userPanel">≡</button>
+<div id="closePanelBtn" role="button" tabindex="0" aria-label="بستن پنل">&times;</div>
 
 <!-- پنل کاربری -->
 <div id="userPanel" role="region" aria-labelledby="panelTitle">
@@ -391,138 +358,132 @@
     </div>
   </div>
   <div class="info-row"><span class="label">اشتراک:</span><span>بدون اشتراک</span></div>
-  <div id="closePanelBtn" role="button" tabindex="0" aria-label="بستن پنل">&times;</div>
 </div>
 
-<div class="container">
-  <div class="middle-container">
-    <!-- وضعیت سرور -->
-    <div class="server-box">
-      <div class="wifi-icon" id="wifiIcon">
-        <img src="https://cdn-icons-png.flaticon.com/512/8603/8603448.png" alt="قطع اتصال">
-      </div>
-      <h2 id="statusTitle" class="status-default">کلیک کنید</h2>
-      <p class="alert">⛔ برای اتصال به ادمین پیام بدهید</p>
-      <button class="connect-btn" onclick="startConnection()">اتصال</button>
-      <div id="message" class="message-box">در حال بررسی وضعیت سرور...</div>
+<div class="container-main">
+  <!-- بخش وسط -->
+  <div class="status-container" aria-label="وضعیت سرور کانتر">
+    <h2 class="title">Counter Counter Strike</h2>
+    <div class="wifi-icon" id="wifiIcon">
+      <img src="https://cdn-icons-png.flaticon.com/512/8603/8603448.png" alt="قطع اتصال">
     </div>
 
-    <!-- کوییک مچ -->
-    <div class="quick-match">
-      <div class="neon-title">Quick Match</div>
+    <h2 id="statusTitle" class="status-default" style="margin-top: 40px;">کلیک کنید</h2>
+    <p class="alert">⛔ برای اتصال به ادمین پیام بدهید</p>
 
-      <button id="serversToggleBtn">
-        <span id="arrow">▼</span>
-        سرورها
-      </button>
+    <button class="connect-btn" id="connectBtn" disabled>اتصال</button>
+    <div id="message" class="message-box"></div>
+  </div>
 
-      <div class="server-select-container hidden" id="serverSelectContainer">
-        <input type="radio" id="server1" name="server" value="server1">
-        <label for="server1">سرور 1</label>
-        <input type="radio" id="server2" name="server" value="server2">
-        <label for="server2">سرور 2</label>
-        <input type="radio" id="server3" name="server" value="server3">
-        <label for="server3">سرور 3</label>
-      </div>
+  <!-- بخش سرورها -->
+  <div class="server-box" aria-label="انتخاب سرور">
+    <div class="server-title">سرورها</div>
 
-      <div class="message-box-qm" id="messageBox"></div>
-
-      <button class="confirm-btn" id="confirmBtn">تأیید</button>
+    <div class="server-select-container" id="serverSelectContainer">
+      <input type="radio" id="server1" name="server" value="server1">
+      <label for="server1">سرور 1</label>
+      <input type="radio" id="server2" name="server" value="server2">
+      <label for="server2">سرور 2</label>
+      <input type="radio" id="server3" name="server" value="server3">
+      <label for="server3">سرور 3</label>
     </div>
+
+    <button class="confirm-btn" id="confirmBtn" disabled>تأیید اتصال</button>
+    <div id="serverMessage" class="message-box"></div>
   </div>
 </div>
 
 <script>
-  // باز و بستن پنل کاربری
+  // پنل کاربری
   const openBtn = document.getElementById('openPanelBtn');
-  const userPanel = document.getElementById('userPanel');
   const closeBtn = document.getElementById('closePanelBtn');
-  const progressCircle = userPanel.querySelector('.progress-circle');
-  const progressPercent = document.getElementById('progressPercent');
-
-  function animateProgress(from, to, duration) {
-    let start = null;
-    function step(timestamp) {
-      if (!start) start = timestamp;
-      const progress = timestamp - start;
-      const percent = Math.max(to, from - (from - to) * (progress / duration));
-      const degrees = (percent / 100) * 360;
-      progressCircle.style.background = `conic-gradient(#0ff 0deg, #0ff ${degrees}deg, #222 ${degrees}deg 360deg)`;
-      progressPercent.textContent = `${Math.round(percent)}%`;
-      if (progress < duration) {
-        window.requestAnimationFrame(step);
-      } else {
-        progressCircle.style.background = `conic-gradient(#0ff 0deg, #0ff ${to*3.6}deg, #222 ${to*3.6}deg 360deg)`;
-        progressPercent.textContent = `${to}%`;
-      }
-    }
-    window.requestAnimationFrame(step);
-  }
+  const userPanel = document.getElementById('userPanel');
 
   openBtn.addEventListener('click', () => {
-    if (userPanel.style.display === 'block') {
-      userPanel.style.display = 'none';
-      openBtn.setAttribute('aria-expanded', 'false');
-    } else {
-      userPanel.style.display = 'block';
-      openBtn.setAttribute('aria-expanded', 'true');
-      animateProgress(100, 0, 1000); // انیمیشن سریع 100 تا 0 درصد
-    }
+    userPanel.style.display = 'block';
+    openBtn.style.display = 'none';
   });
   closeBtn.addEventListener('click', () => {
     userPanel.style.display = 'none';
-    openBtn.setAttribute('aria-expanded', 'false');
+    openBtn.style.display = 'inline-block';
   });
 
-  // وضعیت سرور و انیمیشن اتصال
-  const wifiIcon = document.getElementById('wifiIcon');
+  // بخش سرورها
+  const serverRadios = document.querySelectorAll('input[name="server"]');
+  const confirmBtn = document.getElementById('confirmBtn');
+  const serverMessage = document.getElementById('serverMessage');
+  const connectBtn = document.getElementById('connectBtn');
   const statusTitle = document.getElementById('statusTitle');
   const message = document.getElementById('message');
-  const connectBtn = document.querySelector('.connect-btn');
+  const wifiIcon = document.getElementById('wifiIcon');
 
-  function startConnection() {
-    if (wifiIcon.classList.contains('connecting')) return;
-    wifiIcon.classList.add('connecting');
-    statusTitle.textContent = "در حال اتصال . . .";
-    statusTitle.className = "status-connecting";
-    message.style.display = "block";
-    message.textContent = "در حال اتصال به سرور...";
-    setTimeout(() => {
+  let selectedServer = null;
+  let connectionTimeout;
+
+  // وقتی سرور انتخاب شد، دکمه تأیید فعال می‌شود
+  serverRadios.forEach(radio => {
+    radio.addEventListener('change', () => {
+      selectedServer = radio.value;
+      confirmBtn.disabled = false;
+      message.textContent = '';
+      statusTitle.textContent = 'کلیک کنید';
+      statusTitle.className = 'status-default';
+      connectBtn.disabled = true;
       wifiIcon.classList.remove('connecting');
-      statusTitle.textContent = "سرور آفلاین است";
-      statusTitle.className = "status-offline";
-      message.textContent = "";
-      message.style.display = "none";
-    }, 5000);
-  }
-
-  // کوییک مچ - نمایش / مخفی کردن لیست سرورها
-  const serversToggleBtn = document.getElementById('serversToggleBtn');
-  const serverSelectContainer = document.getElementById('serverSelectContainer');
-  const arrow = document.getElementById('arrow');
-  const messageBox = document.getElementById('messageBox');
-  const confirmBtn = document.getElementById('confirmBtn');
-
-  serversToggleBtn.addEventListener('click', () => {
-    if (serverSelectContainer.classList.contains('hidden')) {
-      serverSelectContainer.classList.remove('hidden');
-      arrow.style.transform = 'rotate(180deg)';
-    } else {
-      serverSelectContainer.classList.add('hidden');
-      arrow.style.transform = 'rotate(0deg)';
-    }
+      wifiIcon.style.borderColor = 'red';
+      wifiIcon.style.boxShadow = '0 0 10px red';
+      wifiIcon.querySelector('img').style.filter = 'none';
+      serverMessage.textContent = '';
+    });
   });
 
   confirmBtn.addEventListener('click', () => {
-    const selected = document.querySelector('input[name="server"]:checked');
-    if (!selected) {
-      messageBox.textContent = "لطفا یک سرور انتخاب کنید!";
-      messageBox.className = "message-box-qm msg-red";
-    } else {
-      messageBox.textContent = `شما سرور ${selected.labels[0].textContent} را انتخاب کردید.`;
-      messageBox.className = "message-box-qm msg-green";
+    if (!selectedServer) return;
+    // فعال کردن دکمه اتصال
+    connectBtn.disabled = false;
+    serverMessage.textContent = '';
+  });
+
+  connectBtn.addEventListener('click', () => {
+    if (!selectedServer) return;
+    clearTimeout(connectionTimeout);
+    message.textContent = '';
+    serverMessage.textContent = '';
+    // حالت اتصال
+    wifiIcon.classList.add('connecting');
+    wifiIcon.style.borderColor = '#00ff66';
+    wifiIcon.style.boxShadow = '0 0 15px #00ff66';
+    statusTitle.textContent = 'در حال اتصال ...';
+    statusTitle.className = 'status-connecting';
+
+    // بر اساس سرور، پیام بعدی متفاوت است
+    if (selectedServer === 'server1') {
+      connectionTimeout = setTimeout(() => {
+        wifiIcon.classList.remove('connecting');
+        wifiIcon.style.borderColor = 'red';
+        wifiIcon.style.boxShadow = '0 0 10px red';
+        statusTitle.textContent = 'اتصال قطع شد';
+        statusTitle.className = 'status-offline';
+      }, 4000);
+    } else if (selectedServer === 'server2') {
+      connectionTimeout = setTimeout(() => {
+        wifiIcon.classList.remove('connecting');
+        wifiIcon.style.borderColor = 'red';
+        wifiIcon.style.boxShadow = '0 0 10px red';
+        statusTitle.textContent = 'اتصال قطع شد';
+        statusTitle.className = 'status-offline';
+      }, 9000);
+    } else if (selectedServer === 'server3') {
+      connectionTimeout = setTimeout(() => {
+        wifiIcon.classList.remove('connecting');
+        wifiIcon.style.borderColor = '#ffcc33';
+        wifiIcon.style.boxShadow = '0 0 15px #ffcc33';
+        statusTitle.textContent = 'سرور از دسترس خارج شد!';
+        statusTitle.className = 'status-error';
+      }, 4000);
     }
   });
 </script>
+
 </body>
 </html>
